--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 /* default */
 
@@ -16,28 +17,75 @@
 /* utility class */
 header{
   width: 100%;
-  height: 150px;
-  background-color: #ccc;
+  height: 80px;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 95%);
   align-items: center;
+  justify-content: space-between;
 }
 header div{
   margin: 15px;
 }
+.logo-container{
+  width: 10%;
+  height: 80px;
+}
+.logo-container img{
+  width: 100%;
+  padding-top: 15px;
+}
+.navbar-menu1,.navbar-menu2{
+  width: 45%;
+  justify-content: space-around;
+  align-items: center;
+}
+.navbar-menu2 i{
+  transform: scale(1.5);
+}
+.navbar-menu2 input{
+  height: 25px;
+  border-radius: 2px;
+  border: none;
+  text-align: center;
+}
+.navbar-menu2 button{
+padding: 5px;
+margin-left: 10px;
+border: none;
+border-radius: 2px;
+font-weight: bold;
+background-color: #FA0814;
+}
+.navbar-menu1 li,.navbar-menu2 li{
+list-style: none;
+margin: 0 15px;
+color: #fff;
+}
 main{
   flex-wrap: wrap;
+  background-color: #141414;
+  min-height:calc(100vh - 80px);
+  width: 100%;
 }
 .film-container{
-  height: 350px;
-  width: 250px;
+  width: 300px;
+  max-height: 450px;
   background-color: #000;
   margin: 25px;
   text-align: center;
   color: #fff;
   flex-direction: column;
-  justify-content: space-around;
+  cursor: pointer;
 }
-.title,.original-title,.language,.rating{
+
+.title,.original-title,.language,.rating,.poster{
   width: 100%;
-  height: 50px;
-  background-color: darkgrey;
+  min-height: 45px;
+  line-height: 45px;
+  border-bottom: 1px solid #141414;
+}
+.poster{
+  height: 300px;
+}
+.poster img{
+  height: 100%;
 }
