--- a/css/style.css
+++ b/css/style.css
@@ -68,24 +68,42 @@ main{
 }
 .film-container{
   width: 300px;
-  max-height: 450px;
+  height: 450px;
   background-color: #000;
   margin: 25px;
   text-align: center;
   color: #fff;
+  position: relative;
   flex-direction: column;
   cursor: pointer;
 }
 
-.title,.original-title,.language,.rating,.poster{
+.title,.original-title,.language,.rating,.overview{
   width: 100%;
   min-height: 45px;
+  font-size: 16px;
   line-height: 45px;
   border-bottom: 1px solid #141414;
 }
+.overview{
+  max-height: 250px;
+  overflow-y: auto;
+}
+.rating i{
+  color: gold;
+}
+.language img{
+  height: 25px;
+  vertical-align: middle;
+  margin-right: 15px;
+}
 .poster{
-  height: 300px;
+  height: 450px;
+  position: absolute;
 }
 .poster img{
   height: 100%;
+}
+.film-container:hover .poster{
+  display: none;
 }
