--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ main{
   position: absolute;
 }
 .poster img{
-  height: 100%;
+  width: 100%;
 }
 .film-container:hover .poster{
   display: none;
