--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ main{
 .title,.original-title,.language,.rating,.overview{
   width: 100%;
   min-height: 45px;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 45px;
   border-bottom: 1px solid #141414;
 }
@@ -115,6 +115,7 @@ main{
 }
 .poster img{
   width: 100%;
+  height: 100%;
 }
 .film-container:hover .poster{
   display: none;
