--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,14 @@ main{
   font-weight: bold;
   font-size: 20px;
 }
-.title,.original-title,.language,.rating,.overview{
+.title,.original-title,.language,.rating,.overview,.misc{
   width: 100%;
-  min-height: 45px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 45px;
   border-bottom: 1px solid #141414;
+}
+.misc{
+  font-size: 10px;
 }
 .overview{
   max-height: 250px;
