--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ main{
 .film-container{
   width: 300px;
   height: 450px;
-  background-color: #000;
+  /* background-color: #000; */
   margin: 25px;
   text-align: center;
   color: #fff;
@@ -126,5 +126,8 @@ main{
   height: 100%;
 }
 .film-container:hover .poster{
-  display: none;
+  opacity: 0.2;
+}
+.film-container:hover .overview{
+  z-index: 1;
 }
