--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,11 @@ main{
   min-height:calc(100vh - 80px);
   width: 100%;
 }
+
 .film-container{
   width: 300px;
   height: 450px;
-  margin: 25px;
+  margin:25px 5px;
   text-align: center;
   position: relative;
   flex-direction: column;
