--- a/css/style.css
+++ b/css/style.css
@@ -73,14 +73,44 @@ margin: 0 15px;
 /* header parts */
 
 /* main parts */
-main{
+a{
+  color: #fff;
+  text-decoration: none;
+}
+main,.first-sight{
   flex-wrap: wrap;
   background-color: #141414;
   min-height:calc(100vh - 80px);
   width: 100%;
 }
-
-.film-container{
+.titleone{
+  width: 100%;
+  height: 70px;
+  align-items:center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.copertina{
+  width: 100%;
+}
+.copertina img{
+  width: 25%;
+  max-height: 600px;
+  margin: 15px;
+}
+.coverTitle,.coverLanguage,.coverOverview{
+  color: #fff;
+  margin: 20px;
+  font-size: 25px;
+}
+.coverTitle{
+  font-size: 45px;
+}
+.coverLanguage img{
+  height: 50px;
+  width: 50px;
+  vertical-align: middle;
+}
+.film-container,.cover-container{
   width: 300px;
   height: 450px;
   margin:25px 5px;
