--- a/css/style.css
+++ b/css/style.css
@@ -82,16 +82,17 @@ main,.first-sight{
   background-color: #141414;
   min-height:calc(100vh - 80px);
   width: 100%;
-  overflow-x: scroll;
 }
 .titleone{
   width: 100%;
   height: 70px;
   align-items:center;
-  background-color: rgba(0, 0, 0, 0.5);
+  padding-left: 15px;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 95%);
 }
 .copertina{
   width: 100%;
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(20,20,20,1) 95%);
 }
 .copertina img{
   width: 30%;
@@ -115,7 +116,7 @@ main,.first-sight{
 .film-container,.cover-container{
   width: 300px;
   height: 450px;
-  margin:25px 5px;
+  margin:10px 2px 10px 15px;
   text-align: center;
   position: relative;
   flex-direction: column;
@@ -137,7 +138,6 @@ main,.first-sight{
   width: 100%;
   font-size: 12px;
   line-height: 45px;
-  border-bottom: 1px solid #141414;
 }
 .misc{
   font-size: 10px;
